SVCDE: Fixed typo in notes

--- a/2020_21/SVCDE/notes/notes.tex
+++ b/2020_21/SVCDE/notes/notes.tex
@@ -1736,7 +1736,7 @@ is a solution to (\ref{linode}) provided that $r$ is a root of the
     where $\alpha,\beta\in\R$ and $i=\sqrt{-1}$. The general soltuion
     to (\ref{linode}) then is
     \begin{align*}
-        y(t) = \exp(\alpha t)\left(C_1 \cos\left(\alpha t\right)+C_2\sin\left(\beta t\right)\right).
+        y(t) = \exp(\alpha t)\left(C_1 \cos\left(\beta t\right)+C_2\sin\left(\beta t\right)\right).
     \end{align*}
 \end{theorem}
 
