--- a/2020_21/PRB/H4/week9/homework.tex
+++ b/2020_21/PRB/H4/week9/homework.tex
@@ -26,6 +26,7 @@ We find the following table:
     \hline
   \end{tabular}
 \end{center}
+EXAMPLE
 You can see that $\E(S)=4$ and $\E(D)=0$. We know that
 \begin{align*}
   \E(S\:D) = \sum_{a\in [2,6]} \sum_{b\in[-2,2]} ab\P(S=a\text{ and }D=b).
@@ -59,7 +60,8 @@ than $a$:
   \item $C:|X_1-X_2|<a$.
 \end{enumerate}
 The cases 1 to 4 are the ones where at least one of the outer
-pieces is shorter than $a$. These events have the probabilities
+pieces is shorter than $a$. The fifth cases is where the middle section 
+is shorter than $a$. The probabilities of these events are
 \begin{align*}
   \P(A) &= \P(A_1) + \P(A_2) = 2a,\\
   \P(B) &= \P(B_1) + \P(B_2) = 2a,\\
